# Halevy-Lotati

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 582afdc7ab2e_address_resolver.py  93091655a083_initial_foundation_schema.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  case_number.py  config.py  seed.py
apps/api/app/models/: __init__.py  activity.py  address_resolution.py  case.py  document.py  enums.py  party.py  user.py
apps/api/app/routers/: activity.py  address_resolution.py  cases.py  parties.py
apps/api/app/schemas/: activity.py  address_resolution.py  case.py  party.py
apps/api/app/services/: govmap.py
apps/api/tests/: conftest.py  test_address_resolution.py  test_cases.py  test_govmap_service.py  test_parties.py
apps/web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/messages/: he.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: address-resolution-card.test.tsx  address-resolution-card.tsx  app-shell.tsx  case-detail.tsx  ui.tsx  (+4 more)
docs/: BACKOFFICE_SPEC.md  FEATURE_SPEC_Tax_Calculator.md  FOUNDATION-STATUS.md  PRD-Phase1-Pre-Signing.md  PRD_DELTA_v1.0_to_v1.1.md  README.md  halevi_luttati_demo.html
docs/Code Examples/: README.md  address_resolver.py  taboo_fetcher.py
docs/superpowers/plans/: 2026-06-07-address-resolver.md
docs/superpowers/specs/: 2026-06-03-foundation-design.md  2026-06-07-address-resolver-design.md
(+10 files in other folders)
